<resources>
    <string name="app_name">DigiKala</string>
    <string name="app_name_fa">دیجی کالا</string>
    <string name="descriptionApp">Android Online Market</string>

    <string name="home_page">خانه</string>
    <string name="category">دسته‌‌بندی‌ها</string>
    <string name="cart">سبد خرید</string>

    <string name="offers">محصولات پیشنهادی</string>
    <string name="price_descending">گران‌ترین</string>
    <string name="price_ascending">ارزان‌ترین</string>
    <string name="topRating_sort">پرامتیازترین</string>
    <string name="popular_sort">پربازدیدترین</string>
    <string name="latest_sort">جدیدترین</string>
    <string name="topRating">پرامتیازترین ها</string>
    <string name="popular">پربازدیدترین ها</string>
    <string name="latest">جدیدترین ها</string>

    <string name="setting">تنظیمات</string>
    <string name="faq">سوالات متداول</string>
    <string name="about_us">درباره ما</string>
    <string name="add_to_cart">اضافه کردن به سبد خرید</string>
    <string name="added_to_cart">به سبد خرید اضافه شد</string>
    <string name="tomans">تومان</string>
    <string name="price">%s%s</string>
    <string name="product_name">نام محصول : </string>
    <string name="product_detail">مشخصات</string>
    <string name="product_comments">نظرات کاربران</string>
    <string name="more_detail">ادامه مطلب</string>
    <string name="sell_by">فروش توسط</string>
    <string name="ready_for_send_storage">آماده ارسال از انبار دیجی کالا</string>
    <string name="product_garanty">گارانتی ۱۸ ماهه دیجی کالا</string>
    <string name="whole_list">مشاهده همه</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">خطا در برقراری ارتباط</string>
    <string name="retry">تلاش مجدد</string>
    <string name="search_hint">جستجو در </string>
    <string name="search_hint_complete">جستجو در ديجی كالا… </string>
    <string name="sort">مرتب سازی</string>
    <string name="filter">فیلترها</string>


    <string name="commit_card">خرید خود را نهایی کنید</string>
    <string name="cart_sum">جمع کل خرید</string>
    <string name="delete">حذف</string>
    <string name="final_price">قیمت نهایی</string>
    <string name="count">تعداد</string>
    <string name="color">رنگ</string>
    <string name="description">توضیحات</string>
    <string name="title">عنوان</string>
    <string name="no_mode">بدون ترتیب</string>
    <string name="filter_default">رنگ، نوع، قیمت …</string>
    <string name="filter_product">فیلتر کردن محصولات</string>
    <string name="size">سایز</string>
    <string name="press_again_for_exit">برای خروج دوباره فشار دهید</string>
    <string name="my_digikala">دیجی‌کالای من</string>
    <string name="login_sentence">برای ورود و با ثبت نام در دیجی کالا پست الکترونیکی خود را وارد نمایید</string>
    <string name="login_hint_email">پست الکترونیکی خود را وارد کنید</string>
    <string name="login_to_digi">ورود به دیجی‌کالا</string>
    <string name="digi_login_rules">با ورود یا ثبت نام در دیجی‌کالا شما شرایط و قوانین استفاده از سرویس های سایت دیجی‌کالا و قوانین حریم خصوصی آن را می پذیرید.</string>
    <string name="enter_password">کلمه عبور</string>
    <string name="login_for_payment">وارد حساب کاربری شوید.</string>
    <string name="order_sent_successful">شفارش ثبت شد</string>
    <string name="first_name">نام کوچک</string>
    <string name="last_name">نام‌خانوادگی</string>
    <string name="sign_up">ثبت ‌نام</string>
    <string name="accept">تایید</string>
    <string name="password">رمز عبور</string>
    <string name="personal_info">اطلاعات شخصی</string>
    <string name="country">کشور</string>
    <string name="shipping_info">اطلاعات ارسال کالا</string>
    <string name="city">شهر</string>
    <string name="state">استان</string>
    <string name="address_one">آدرس اول</string>
    <string name="next_step">مرحله بعد</string>
    <string name="use_map">استفاده از نقشه</string>
    <string name="postalCode">کدپستی</string>
    <string name="activation_wallet">فعال‌سازی کیف پول</string>
    <string name="point">امتیاز</string>
    <string name="my_orders">سفارشات من</string>
    <string name="delivered_orders">تحویل شده</string>
    <string name="in_process_orders">در حال پردازش</string>
    <string name="send_orders">ثبت سفارش</string>
    <string name="sent_to">ارسال به</string>
    <string name="coupon">کد تخفیف</string>
    <string name="add_coupon">اعمال کد تخفیف</string>

    <string name="finish_payment">پرداخت نهایی</string>
    <string name="no_address_from_map">موقعیت این آدرس بر روی نقشه تعیین نشده، برای ادامه وجود موقعیت الزامی است.</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_location">اضافه کردن موقعیت</string>
    <string name="long_click_for_add_map_marker">برای انتخاب موقعیت انگشت خود را نگهدارید.</string>
    <string name="must_login">برای ارسال نظر باید وارد حساب کاربری شوید.</string>

    <string name="enter_your_comment">دیدگاه خود را وارد کنید</string>
    <string name="send_comment">ثبت دیدگاه</string>
    <string name="minimum_characters_of_comment">دیدگاه باید حداقل 8 کارکتر باشد</string>
    <string name="your_comment_accepted">دیدگاه شما ثبت شد</string>

    <string name="notification_time">انتخاب زمان ارسال نوتیفیکشین</string>
    <string name="per_3_hours">سه ساعت یکبار</string>
    <string name="per_5_hours">پنج ساعت یکبار</string>
    <string name="per_8_hours">هشت ساعت یکبار</string>
    <string name="per_12_hours">دوازده ساعت یکبار</string>
    <string name="custom_time">انتخاب زمان دلخواه برحسب ساعت</string>
    <string name="choose_time">زمان مورد نظر</string>
    <string name="change_timing">تغییر زمان ارسال</string>
    <string name="channel_id">digikala_channel_id</string>
    <string name="channel_name">DigiKala Channel</string>
    <string name="channel_description">This is a Channel for Digikala</string>
    <string name="incorrect_pass">پسورد نادرست ميباشد</string>
    <string name="new_pictures_title">محصول جديد</string>


</resources>